# AI-agent-

./: .env.example  .gitignore  CONTRIBUTING.md  JOURNAL.md  PLAN.md  README.md  pyproject.toml  requirements.txt  research_agent.py  streamlit_app.py
docs/: JOURNAL.md  PLAN.md  PROGRESS.md
src/investment_agent/: __init__.py
src/investment_agent/agents/: comparison.py  intent_router.py  research_agent.py  structured_output.py
src/investment_agent/llm/: client.py
src/investment_agent/reporting/: charts.py
src/investment_agent/schemas/: __init__.py  company.py  report.py
src/investment_agent/tools/: market_tool.py  metrics_tool.py  news_tool.py  peer_tool.py  sec_tool.py  technical_tool.py
src/investment_agent/validation/: data_validator.py  ticker_validator.py
tests/: test_tools.py
