[project]
name = "investment-research-agent"
version = "0.1.0"
description = "Investment research agent using SEC data, financial metrics, peer comparison, and technical indicators."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai (>=2.41.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "yfinance (>=1.4.1,<2.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "groq (>=1.4.0,<2.0.0)",
    "langchain (>=1.3.4,<2.0.0)",
    "langchain-openai (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "black (>=26.5.1,<27.0.0)"
]

[tool.poetry]
packages = [{ include = "investment_agent", from = "src" }]
